# libssha

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake  meson.build  meson.options
doc/: Doxyfile
examples/: CMakeLists.txt  test-agent-win.cpp  test-agent.cpp
include/libssha/agent/: match-info.h  session.h
include/libssha/extensions/: extension-factory.h  extension.h  openssh-restrict-destination.h  openssh-session-bind.h
include/libssha/key/: key-factory.h  key-manager-observer.h  key-manager.h  key.h  lock-provider.h  pub-key.h
include/libssha/messages/: add-identity.h  extension.h  identities-answer.h  lock-message.h  message.h  remove-identity.h  sign-request.h  sign-response.h  userauth-request.h
include/libssha/providers/botan/: botan-lock-provider.h  botan-lock.h  edcsa-key.h  edcsa-pub.h  eddsa-key.h  eddsa-pub.h  rsa-key.h  rsa-pub.h
include/libssha/utils/: deserializer.h  logger.h  secure_vector.h  serializer.h
scripts/: generate_coverage.sh
src/agent/: session.cpp
src/extensions/: extension-factory.cpp  openssh-restrict-destination.cpp  openssh-session-bind.cpp
src/key/: key-factory.cpp  key-manager.cpp  key.cpp  pub-key.cpp
src/messages/: add-identity.cpp  extension.cpp  identities-answer.cpp  lock-message.cpp  message.cpp  remove-identity.cpp  sign-request.cpp  sign-response.cpp  userauth-request.cpp
src/providers/botan/: botan-lock-provider.cpp  botan-lock.cpp  edcsa-key.cpp  edcsa-pub.cpp  eddsa-key.cpp  eddsa-pub.cpp  rsa-key.cpp  rsa-pub.cpp
src/utils/: deserializer.cpp  logger.cpp  serializer.cpp
tests/integration/: CMakeLists.txt  home_replace.c  integration_tests.sh.in  lock_unlock_agent.cpp  meson.build  sshd_config.cmake  tests.sh  torture_run.sh
tests/integration/home/.ssh/: meson.build  ssh_config.cmake
tests/unit/: CMakeLists.txt  main.cpp  meson.build
tests/unit/extensions/: restrict_destination_test.cpp  session_bind_test.cpp
tests/unit/key/: key_manager_test.cpp  key_test.cpp  pub_key_test.cpp
tests/unit/messages/: add_identity_test.cpp  extension_test.cpp  identities_answer_test.cpp  lock_message_test.cpp  message_test.cpp  remove_identity_test.cpp  sign_request_test.cpp  sign_response_test.cpp  userauth_test.cpp
tests/unit/utils/: deserializer_test.cpp  serializer_test.cpp
